<resources>
    <string name="app_name">Rest-App</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="enter_email">enter email</string>
    <string name="enter_password">enter password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign">SignUp</string>
    <string name="already_have_an_account_signin">already have an account?SignIn</string>
    <string name="firstname">firstname</string>
    <string name="lastname">lastname</string>
    <string name="email">email</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
</resources>